Some nitpicky bugfixes

--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -54,10 +54,10 @@
    ],
    "source": [
     "# Test the functionality or pythonBridgeClient.py\n",
-    "from pythonBridgeClient import *\n",
+    "from pythonBridgeClient import VsCodeBridgeClient\n",
     "\n",
     "projectName=\"c:\\\\Users\\\\Kut\\\\.continue\"\n",
-    "vsCode=VsCode(projectName)\n",
+    "vsCode=VsCodeBridgeClient(projectName)\n",
     "#vsCode.executeApi(\"showMessage\",\"👋 Hello world!\")\n",
     "#vsCode.queryApi(True)\n",
     "#vsCode.commands\n",
@@ -66,11 +66,134 @@
     "vc=RemoteObject(vsCode,None,'vscode')\n",
     "print(vc.__repr__(recursive=True))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2348ec0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_bridge',\n",
+       " 'activeDebugSession',\n",
+       " 'addBreakpoint',\n",
+       " 'addWatchpoint',\n",
+       " 'attach',\n",
+       " 'breakpoints',\n",
+       " 'bridge',\n",
+       " 'callStack',\n",
+       " 'childWindows',\n",
+       " 'children',\n",
+       " 'click',\n",
+       " 'close',\n",
+       " 'closeWindow',\n",
+       " 'connect',\n",
+       " 'currentDebuggerLocation',\n",
+       " 'detatch',\n",
+       " 'disconnect',\n",
+       " 'files',\n",
+       " 'find',\n",
+       " 'findChildWindows',\n",
+       " 'frame',\n",
+       " 'gdb',\n",
+       " 'getBreakpoints',\n",
+       " 'getCallStack',\n",
+       " 'getChildWindows',\n",
+       " 'getDebuggedProcessPid',\n",
+       " 'getDebuggerLocation',\n",
+       " 'getFiles',\n",
+       " 'getIsPaused',\n",
+       " 'getLocation',\n",
+       " 'getProcessPid',\n",
+       " 'getWatchpoints',\n",
+       " 'getWindowLayout',\n",
+       " 'getWindowLocation',\n",
+       " 'getWindowSize',\n",
+       " 'getWindowTitle',\n",
+       " 'getWindowVisible',\n",
+       " 'layout',\n",
+       " 'location',\n",
+       " 'name',\n",
+       " 'open',\n",
+       " 'openCode',\n",
+       " 'openCodeFile',\n",
+       " 'openDebuggerLocation',\n",
+       " 'openProject',\n",
+       " 'parent',\n",
+       " 'pause',\n",
+       " 'paused',\n",
+       " 'pid',\n",
+       " 'project',\n",
+       " 'read',\n",
+       " 'removeBreakpoint',\n",
+       " 'removeWatchpoint',\n",
+       " 'restart',\n",
+       " 'resume',\n",
+       " 'saveAll',\n",
+       " 'sendKeys',\n",
+       " 'setWindowFocus',\n",
+       " 'setWindowLayout',\n",
+       " 'setWindowLocation',\n",
+       " 'setWindowSize',\n",
+       " 'size',\n",
+       " 'stack',\n",
+       " 'start',\n",
+       " 'stop',\n",
+       " 'title',\n",
+       " 'visible',\n",
+       " 'waitExit',\n",
+       " 'watchpoints',\n",
+       " 'windowLayout',\n",
+       " 'windowLocation',\n",
+       " 'windowSize',\n",
+       " 'windowTitle',\n",
+       " 'write']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the next higher level of abstraction atop the VscodeBridgeClient is the VsCode ide object\n",
+    "from pyVsCode import VsCodeIde\n",
+    "ide=VsCodeIde(None)\n",
+    "dir(ide)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -84,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
